--- a/app1/src/main/resources/templates/login.html
+++ b/app1/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
     <head>
-        <title>Spring Security Example </title>
+        <title>Login</title>
     </head>
     <body>
         <div th:if="${param.error}">
@@ -10,10 +10,10 @@
         <div th:if="${param.logout}">
             You have been logged out.
         </div>
-        <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
+        <form th:action="@{/api/login}" method="post">
+            <div><label> Username : <input type="text" name="username"/> </label></div>
             <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+            <div><input type="submit" value="Login"/></div>
         </form>
     </body>
 </html>
