--- a/app1/src/main/resources/templates/dashboard.html
+++ b/app1/src/main/resources/templates/dashboard.html
@@ -3,6 +3,42 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head>
         <title>Dashboard</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #BAB9B9;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100vh;
+                margin: 0;
+                flex-direction: column;
+            }
+
+            h1 {
+                text-align: center;
+                color: #333;
+            }
+
+            form {
+                text-align: center;
+                margin-top: 20px;
+            }
+
+            input[type="submit"] {
+                background-color: #f44336;
+                color: white;
+                padding: 10px 20px;
+                font-size: 16px;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+            }
+
+            input[type="submit"]:hover {
+                background-color: #d32f2f;
+            }
+        </style>
     </head>
     <body>
         <h1 th:inline="text">Hello <span th:remove="tag" sec:authentication="name"></span>!</h1>
@@ -12,3 +48,4 @@
         </form>
     </body>
 </html>
+
