--- a/app1/src/main/resources/templates/login.html
+++ b/app1/src/main/resources/templates/login.html
@@ -2,18 +2,67 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
     <head>
         <title>Login</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #BAB9B9;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100vh;
+                margin: 0;
+            }
+
+            form {
+                background-color: #fff;
+                padding: 20px;
+                border-radius: 8px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+
+            div {
+                margin-bottom: 15px;
+            }
+
+            label {
+                display: block;
+                margin-bottom: 5px;
+            }
+
+            input {
+                width: 100%;
+                padding: 8px;
+                box-sizing: border-box;
+            }
+
+            input[type="submit"] {
+                background-color: #4caf50;
+                color: white;
+                cursor: pointer;
+            }
+
+            input[type="submit"]:hover {
+                background-color: #45a049;
+            }
+
+            .error {
+                color: #ff0000;
+            }
+        </style>
     </head>
     <body>
-        <div th:if="${param.error}">
-            Invalid username and password.
-        </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
         <form th:action="@{/api/login}" method="post">
             <div><label> Username : <input type="text" name="username"/> </label></div>
             <div><label> Password: <input type="password" name="password"/> </label></div>
             <div><input type="submit" value="Login"/></div>
         </form>
+
+        <div th:if="${error}" class="error">
+            Invalid username and password.
+        </div>
+        <div th:if="${param.logout}" class="error">
+            You have been logged out.
+        </div>
     </body>
 </html>
+
