--- a/app1/src/main/resources/templates/dashboard.html
+++ b/app1/src/main/resources/templates/dashboard.html
@@ -1,51 +1,84 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head>
-        <title>Dashboard</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #BAB9B9;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                height: 100vh;
-                margin: 0;
-                flex-direction: column;
-            }
+    xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
-            h1 {
-                text-align: center;
-                color: #333;
-            }
+<head>
+    <title>Dashboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #BAB9B9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+        }
 
-            form {
-                text-align: center;
-                margin-top: 20px;
-            }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
 
-            input[type="submit"] {
-                background-color: #f44336;
-                color: white;
-                padding: 10px 20px;
-                font-size: 16px;
-                border: none;
-                border-radius: 4px;
-                cursor: pointer;
-            }
+        form {
+            text-align: center;
+            margin-top: 20px;
+        }
 
-            input[type="submit"]:hover {
-                background-color: #d32f2f;
-            }
-        </style>
-    </head>
-    <body>
-        <h1 th:inline="text">Hello <span th:remove="tag" sec:authentication="name"></span>!</h1>
-        <br>
+        input[type="submit"] {
+            background-color: #f44336;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #d32f2f;
+        }
+    </style>
+</head>
+
+<body>
+    <div style="text-align: center;">
+
+        <div sec:authorize="isAuthenticated()">
+            <span th:inline="text">Hello <b><span th:remove="tag" sec:authentication="name"></span></b>, you are logged
+                in!</span>
+
+            <br>
+
+            <div>
+
+                <img style="max-width: 100px; max-height: 100px" src="/default-user.jpeg">
+                <br>
+                <input type="text" name="URL" placeholder="URL" />
+                <input type="submit" value="Change Picture" />
+
+            </div>
+
+
+            <br>
+
+            <div style="border:1px solid black;" sec:authorize="hasRole('ROLE_ADMIN')">
+                Admin Console:
+                <br>
+                <input type="submit" value="Export Users" />
+                <input type="submit" value="Import Users" />
+                <input type="submit" value="Launch Update" />
+
+            </div>
+
+
+        </div>
         <form th:action="@{/api/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
+            <input type="submit" value="Sign Out" />
         </form>
-    </body>
-</html>
 
+    </div>
+</body>
+
+</html>
