updated app name, routes etc

--- a/app1/src/main/resources/templates/index.html
+++ b/app1/src/main/resources/templates/index.html
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-    <head>
-      <title></title>
-        <meta http-equiv="refresh" content="0; url=/dashboard" />
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+    xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
-    </head>
-    <body>
-      
-    </body>
+<head>
+    <title>Dashboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #BAB9B9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        form {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .console {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        input[type="submit"] {
+            background-color: #4caf50;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .signout {
+            background-color: #f44336 !important;
+            /* Change this color as desired */
+            color: white;
+        }
+
+        .signout:hover {
+            background-color: #d32f2f !important;
+            /* Change this color as desired */
+        }
+
+        #url {
+            padding: 10px;
+            box-sizing: border-box;
+            margin-bottom: 5px;
+        }
+
+        .cp {
+            padding: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <div style="text-align: center;">
+
+        <div sec:authorize="isAuthenticated()">
+            <span th:inline="text">Hello <b><span th:remove="tag" sec:authentication="name"></span></b>, you are logged
+                in!</span>
+
+            <br>
+
+            <div class="cp">
+
+                <img style="max-width: 100px; max-height: 100px" src="/default-user.jpeg">
+
+                <br>
+                <form th:action="@{/api/changepic}" method="post">
+                    <input type="hidden" name="username" th:value="${#authentication.name}" />
+                    <input type="text" id="url" name="newurl" placeholder="URL" />
+                    <input type="submit" value="Change Picture" />
+                </form>
+
+            </div>
+
+
+            <br>
+
+            <div class="console" sec:authorize="hasRole('ROLE_ADMIN')">
+                Admin Console:
+                <br>
+                <input type="submit" value="Export Users" />
+                <input type="submit" value="Import Users" />
+                <input type="submit" value="Launch Update" />
+
+            </div>
+
+
+        </div>
+        <form th:action="@{/api/logout}" method="post">
+            <input type="submit" class="signout" value="Sign Out" />
+        </form>
+
+    </div>
+</body>
+
 </html>
