--- a/app1/src/main/resources/templates/index.html
+++ b/app1/src/main/resources/templates/index.html
@@ -81,7 +81,7 @@
 
             <div class="cp">
 
-                <img style="max-width: 100px; max-height: 100px" src="/default-user.jpeg">
+                <img style="max-width: 100px; max-height: 100px" th:src="${profilePicURL}">
 
                 <br>
                 <form th:action="@{/api/changepic}" method="post">
