--- a/app1/src/main/resources/templates/index.html
+++ b/app1/src/main/resources/templates/index.html
@@ -67,6 +67,44 @@
         .cp {
             padding: 20px;
         }
+
+        .console form input[type="file"] {
+        display: none; /* Hide the default file input */
+    }
+
+    .console form label.file-label {
+        background-color: #03a9f4; /* Light blue color */
+        color: white;
+        padding: 10px 20px;
+        font-size: 16px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        display: inline-block;
+    }
+
+    .console form label.file-label:hover {
+        background-color: #0288d1; /* Slightly darker blue on hover */
+    }
+
+    .console form label.file-label::before {
+        content: "Browse File";
+    }
+
+    .console form input[type="submit"] {
+        background-color: #4caf50; /* Green color */
+        color: white;
+        padding: 10px 20px;
+        font-size: 16px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        display: inline-block;
+    }
+
+    .console form input[type="submit"]:hover {
+        background-color: #45a049; /* Slightly darker green on hover */
+    }
     </style>
 </head>
 
@@ -96,8 +134,15 @@
             <div class="console" sec:authorize="hasRole('ROLE_ADMIN')">
                 Admin Console:
                 <br>
-                <form th:action="@{/api/export}" method="post"> <input type="submit" value="Export Users" /> </form>
-                <form th:action="@{/api/import}" method="post"> <input type="submit" value="Import Users" /> </form>
+                <form th:action="@{/api/export}" method="get"> <input type="submit" value="Export Users" /> </form>
+                
+                <form th:action="@{/api/import}" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" id="file-input" accept=".ser" />
+    <label for="file-input" class="file-label"></label>
+    <input type="submit" value="Import Users" />
+</form>
+
+
                 <form th:action="@{/api/appupdate}" method="post"> <input type="submit" value="Launch Update" /> </form>
 
             </div>
