--- a/app1/src/main/resources/templates/index.html
+++ b/app1/src/main/resources/templates/index.html
@@ -137,7 +137,7 @@
                 <form th:action="@{/api/export}" method="get"> <input type="submit" value="Export Users" /> </form>
                 
                 <form th:action="@{/api/import}" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" id="file-input" accept=".ser" />
+    <input type="file" name="file" id="file-input" accept=".zip" />
     <label for="file-input" class="file-label"></label>
     <input type="submit" value="Import Users" />
 </form>
